--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
+<!DOCTYPE html>
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Any relevant title you want to give</title>
     </head>
-    <body>
+    <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" >  
+        <span id="rate_val">
+            10.25%
+        </span><br/>
+        No. of Years <select id="years">
+            <option value="1">1</option>
+            <!-- fill in the rest of the values-->
+        </select>  <br/>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        <button onclick="compute()"><span id="result">
+
+        </span>Compute Interest</button>
+    </div>
+    <footer>
+
+        &#169; Everyone can get rich
+
+
+</footer>
 </html>
