--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
-<!DOCTYPE html>
 <html>
     <head>
+        <title>Web-App Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Any relevant title you want to give</title>
     </head>
-    <div class="maindiv">
-        <h1>Simple Interest Calculator</h1>
+    <body>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+            <div class="subdiv">
+                <label for="principal">Amount</label>
+                <input type="number"  id="principal" name="principal">  <br><br>
+                <label for="rate">Interest Rate</label>
+                <input type="range" id="rate" name="rate" min="1" max="20" step="0.25" value="10.25" onclick="updateRate()">  
+                <span id="rate_val"> 10.25% </span> <br><br>
+                <label for="years">No. of Years</label>
+                <select id="years" name="years">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select> <br><br>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Interest Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" >  
-        <span id="rate_val">
-            10.25%
-        </span><br/>
-        No. of Years <select id="years">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-        </select>  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()"><span id="result">
-
-        </span>Compute Interest</button>
-    </div>
-    <footer>
-
-        &#169; Everyone can get rich
-
-
-</footer>
+                <button onclick="compute()">Compute Interest</button> <br><br>
+                <span id="result">If you deposit <mark id="m1"></mark>,<br>at an interest rate of <mark id="m2"></mark>.<br>You will receive an ammount of <mark id="m3"></mark>,<br>in the year <mark id="m4"></mark>.</span><br>
+            </div>
+            <footer>
+                <img src="copyright-symbol.jpg" alt="copyright-symbol" width="20px">Everyone Can Get Rich
+            </footer>
+        </div>
+    </body>
 </html>
